--- a/backend/package.json
+++ b/backend/package.json
@@ -24,14 +24,17 @@
     "makemigrations:create": "npm run typeorm migration:create ./src/migrations/migration-empty"
   },
   "dependencies": {
+    "@apollo/server": "^4.5.0",
+    "@nestjs/apollo": "^11.0.4",
     "@nestjs/common": "^9.0.0",
     "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
+    "@nestjs/graphql": "^11.0.4",
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
-    "@nestjs/swagger": "^6.2.1",
     "@nestjs/typeorm": "^9.0.1",
+    "graphql": "^16.6.0",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
