--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,10 @@
     "gen": "orval"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.10",
     "@heroicons/react": "^2.0.16",
     "daisyui": "^2.51.3",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
