--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,8 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.1",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "graphql": "^16.6.0",
     "mysql2": "^3.2.0",
     "reflect-metadata": "^0.1.13",
