--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-router-dom": "^6.9.0",
     "unstated-next": "^1.1.0"
   },
