--- a/backend/package.json
+++ b/backend/package.json
@@ -38,6 +38,7 @@
     "@nestjs/typeorm": "^9.0.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "mysql2": "^3.2.0",
     "passport": "^0.6.0",
@@ -51,6 +52,7 @@
     "@nestjs/cli": "^9.0.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
+    "@types/cookie-parser": "^1.4.3",
     "@types/express": "^4.17.13",
     "@types/jest": "29.2.4",
     "@types/node": "18.11.18",
