--- a/backend/package.json
+++ b/backend/package.json
@@ -41,6 +41,7 @@
     "cookie-parser": "^1.4.6",
     "graphql": "^16.6.0",
     "mysql2": "^3.2.0",
+    "node-fetch": "2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
